adding the custom-image changes for seldon

--- a/odhseldon/cluster/custom-image/custom-image-dc.yaml
+++ b/odhseldon/cluster/custom-image/custom-image-dc.yaml
@@ -1,236 +1,14 @@
-apiVersion: packages.operators.coreos.com/v1
-kind: PackageManifest
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  creationTimestamp: "2021-06-22T08:18:48Z"
-  labels:
-    catalog: certified-operators
-    catalog-namespace: openshift-marketplace
-    operatorframework.io/arch.amd64: supported
-    operatorframework.io/os.linux: supported
-    provider: Seldon Technologies
-    provider-url: ""
-  name: seldon-operator-certified
-  namespace: openshift-marketplace
-  selfLink: /apis/packages.operators.coreos.com/v1/namespaces/openshift-marketplace/packagemanifests/seldon-operator-certified
-spec: {}
-status:
-  catalogSource: certified-operators
-  catalogSourceDisplayName: Certified Operators
-  catalogSourceNamespace: openshift-marketplace
-  catalogSourcePublisher: Red Hat
-  channels:
-  - currentCSV: seldon-operator.v1.2.2
-    currentCSVDesc:
-      annotations:
-        alm-examples: |-
-          [
-            {
-              "apiVersion": "machinelearning.seldon.io/v1",
-              "kind": "SeldonDeployment",
-              "metadata": {
-                "name": "seldon-model"
-              },
-              "spec": {
-                "name": "test-deployment",
-                "predictors": [
-                  {
-                    "componentSpecs": [
-                      {
-                        "spec": {
-                          "containers": [
-                            {
-                              "image": "registry.connect.redhat.com/seldonio/mock-classifier@sha256:482ee477c344badcaa80e850f4339db41957f9c2396ae24f9e398b67bd5c184e",
-                              "name": "classifier"
-                            }
-                          ]
-                        }
-                      }
-                    ],
-                    "graph": {
-                      "children": [],
-                      "endpoint": {
-                        "type": "REST"
-                      },
-                      "name": "classifier",
-                      "type": "MODEL"
-                    },
-                    "name": "example",
-                    "replicas": 1
-                  }
-                ]
-              }
-            }
-          ]
-        capabilities: Seamless Upgrades
-        categories: AI/Machine Learning
-        certified: "false"
-        containerImage: registry.connect.redhat.com/seldonio/seldon-core-operator@sha256:174abdbca57a34b0c102a3bf87f8640121ae28f2857411039d2fc9729f23efc0
-        createdAt: "2019-05-21 15:00:00"
-        description: The Seldon operator for management, monitoring and operations of machine learning systems through the Seldon Engine. Once installed, the Seldon Operator provides multiple functions which facilitate the productisation, monitoring and maintenance of machine learning systems at scale.
-        repository: https://github.com/SeldonIO/seldon-core
-        support: Clive Cox
-      apiservicedefinitions: {}
-      customresourcedefinitions:
-        owned:
-        - description: A seldon engine deployment
-          displayName: Seldon Delpoyment
-          kind: SeldonDeployment
-          name: seldondeployments.machinelearning.seldon.io
-          version: v1
-      description: "The Seldon operator enables for native operation of production machine learning workloads, including monitoring and operations of language-agnostic models with the benefits of real-time metrics and log analysis.\n   \n## Overview\nSeldon Core is an open source platform for deploying machine learning models on a Kubernetes cluster.\n\n* Deploy machine learning models in the cloud or on-premise.\n* Get metrics and ensure proper governance and compliance for your running machine learning models.\n* Create powerful inference graphs made up of multiple components.\n* Provide a consistent serving layer for models built using heterogeneous ML toolkits.\n\nYou can get started by following the guides in our documentation at https://docs.seldon.io/projects/seldon-core/en/latest/workflow/README.html\n"
-      displayName: Seldon Operator
-      installModes:
-      - supported: true
-        type: OwnNamespace
-      - supported: true
-        type: SingleNamespace
-      - supported: false
-        type: MultiNamespace
-      - supported: true
-        type: AllNamespaces
-      keywords:
-      - mlops
-      - aiops
-      - production
-      - monitoring
-      links:
-      - name: Website
-        url: https://www.seldon.io/
-      - name: Documentation
-        url: https://docs.seldon.io/projects/seldon-core/en/latest/
-      maintainers:
-      - email: hello@seldon.io
-        name: Seldon Technologies
-      maturity: alpha
-      minKubeVersion: 1.13.0
-      provider:
-        name: Seldon Technologies
-      relatedImages:
-      - registry.connect.redhat.com/seldonio/seldon-core-operator@sha256:174abdbca57a34b0c102a3bf87f8640121ae28f2857411039d2fc9729f23efc0
-      - registry.connect.redhat.com/seldonio/mock-classifier@sha256:482ee477c344badcaa80e850f4339db41957f9c2396ae24f9e398b67bd5c184e
-      - registry.connect.redhat.com/seldonio/tfproxy-rest@sha256:d38464683754a4c4f01f55b4bb8942df5f08429f41711638adeda82301745361
-      - registry.connect.redhat.com/seldonio/tensorflow-serving@sha256:1dc53edc5c8d1b151782f8386c0770d0358c6397eaf42ec55ebd18f331c5ef9e
-      - registry.connect.redhat.com/seldonio/storage-initializer@sha256:eb2b47a2f8c96604665b3d1a18d7e39b6a69dd5b061e0f867ab093afc294285c
-      - registry.connect.redhat.com/seldonio/mlflowserver-rest@sha256:fa87b40b1268f12a1614762bbd83960ca13ebcf15dd4fbf0b414f33f33722719
-      - registry.connect.redhat.com/seldonio/sklearnserver-grpc@sha256:c835baa699e6fb3f6c7b0016d075758ce4827520c04429b032920efb7df27011
-      - registry.connect.redhat.com/seldonio/mlflowserver-grpc@sha256:e085e33c822b42901dcfc9e1740126bf5432aa879b870e02c8f6ebb2195f34d7
-      - registry.connect.redhat.com/seldonio/alibiexplainer@sha256:e08a45f335c2ef763ac10787e4718fb4a1067d6b69ff106e8eca298fc91c3616
-      - registry.connect.redhat.com/seldonio/seldon-core-executor@sha256:f46297a51ca7b2087a7ee3d3de0312024f696474af6dec4764eeb6c2daca4247
-      - registry.connect.redhat.com/seldonio/xgboostserver-grpc@sha256:3dd28690bfdf4b19d5429a26116534c3c5cd25973b12238cd0fb1dbae8c3b8ad
-      - registry.connect.redhat.com/seldonio/mock-classifier@sha256:350e900f1709c12c73fae170940b158e1d4ad6ce4ead9c884a763d8a27d770e2
-      - registry.connect.redhat.com/seldonio/sklearnserver-rest@sha256:b370b068ea0ac1464e384549f45f9fb93da3b2970b60e0090829f384f5e9c5dc
-      - registry.connect.redhat.com/seldonio/seldon-engine@sha256:7560432beb443c9bcd1f72c765eff4b3c418faa6e22111eb0bb41f6e47182df6
-      - registry.connect.redhat.com/seldonio/tfproxy-grpc@sha256:2d713271dfb7bd056d1011ceef218c76806313ce2e9afb8f92e22238038c1888
-      - registry.connect.redhat.com/seldonio/xgboostserver-rest@sha256:c8a95aae4b173db7991cbe83ca1ab1bc3165ad90fdd9de10f4998604c7dfc7a5
-      version: 1.2.2
-    name: alpha
-  - currentCSV: seldon-operator.v1.7.0
-    currentCSVDesc:
-      annotations:
-        alm-examples: |-
-          [
-            {
-              "apiVersion": "machinelearning.seldon.io/v1",
-              "kind": "SeldonDeployment",
-              "metadata": {
-                "labels": {
-                  "app": "seldon",
-                  "app.kubernetes.io/instance": "seldon1",
-                  "app.kubernetes.io/name": "seldon",
-                  "app.kubernetes.io/version": "v0.5"
-                },
-                "name": "seldon-model"
-              },
-              "spec": {
-                "name": "test-deployment",
-                "predictors": [
-                  {
-                    "componentSpecs": [
-                      {
-                        "spec": {
-                          "containers": [
-                            {
-                              "image": "seldonio/mock_classifier:1.6.0",
-                              "name": "classifier"
-                            }
-                          ]
-                        }
-                      }
-                    ],
-                    "graph": {
-                      "children": [],
-                      "name": "classifier",
-                      "type": "MODEL"
-                    },
-                    "name": "example",
-                    "replicas": 1
-                  }
-                ]
-              },
-              "status": {}
-            }
-          ]
-        capabilities: Seamless Upgrades
-        categories: AI/Machine Learning
-        certified: "false"
-        containerImage: registry.connect.redhat.com/seldonio/seldon-core-operator@sha256:d50e4585f1f212b3fd5aa4200ccb2e2260b44cf17ed4d0fc89bfa61cf1969b9b
-        createdAt: "2019-05-21 15:00:00"
-        description: The Seldon operator for management, monitoring and operations of machine learning systems through the Seldon Engine. Once installed, the Seldon Operator provides multiple functions which facilitate the productisation, monitoring and maintenance of machine learning systems at scale.
-        operators.operatorframework.io/builder: operator-sdk-v1.2.0
-        operators.operatorframework.io/project_layout: go.kubebuilder.io/v2
-        repository: https://github.com/SeldonIO/seldon-core
-        support: Clive Cox
-      apiservicedefinitions: {}
-      customresourcedefinitions:
-        owned:
-        - description: A seldon engine deployment
-          displayName: Seldon Delpoyment
-          kind: SeldonDeployment
-          name: seldondeployments.machinelearning.seldon.io
-          version: v1
-      description: "The Seldon operator enables for native operation of production machine learning workloads, including monitoring and operations of language-agnostic models with the benefits of real-time metrics and log analysis.\n   \n## Overview\nSeldon Core is an open source platform for deploying machine learning models on a Kubernetes cluster.\n\n* Deploy machine learning models in the cloud or on-premise.\n* Get metrics and ensure proper governance and compliance for your running machine learning models.\n* Create powerful inference graphs made up of multiple components.\n* Provide a consistent serving layer for models built using heterogeneous ML toolkits.\n\nYou can get started by following the guides in our documentation at https://docs.seldon.io/projects/seldon-core/en/latest/workflow/README.html\n"
-      displayName: Seldon Operator
-      installModes:
-      - supported: true
-        type: OwnNamespace
-      - supported: true
-        type: SingleNamespace
-      - supported: false
-        type: MultiNamespace
-      - supported: true
-        type: AllNamespaces
-      keywords:
-      - mlops
-      - aiops
-      - production
-      - monitoring
-      links:
-      - name: Website
-        url: https://www.seldon.io/
-      - name: Documentation
-        url: https://docs.seldon.io/projects/seldon-core/en/latest/
-      maintainers:
-      - email: hello@seldon.io
-        name: Seldon Technologies
-      maturity: stable
-      minKubeVersion: 1.16.0
-      provider:
-        name: Seldon Technologies
-      relatedImages:
-      - registry.connect.redhat.com/seldonio/alibiexplainer@sha256:a8f17861182f9611d50af0db2c93b9ddb6077b8b1919867ca92afe368886ffcd
-      - registry.connect.redhat.com/seldonio/mock-classifier@sha256:35952ee4778151cd5fc69929b94e82e2dcb0ad111ffb76f7b406a2e8cc461700
-      - registry.connect.redhat.com/seldonio/seldon-core-operator@sha256:d50e4585f1f212b3fd5aa4200ccb2e2260b44cf17ed4d0fc89bfa61cf1969b9b
-      - registry.connect.redhat.com/seldonio/tensorflow-serving@sha256:1dc53edc5c8d1b151782f8386c0770d0358c6397eaf42ec55ebd18f331c5ef9e
-      - registry.connect.redhat.com/seldonio/xgboostserver@sha256:85a572a03e2c0ce1a7fb10c622f73c65d717a6e05c1ee00f5148b25774394f0b
-      - registry.connect.redhat.com/seldonio/seldon-core-executor@sha256:2831ca7ae5a1451df2b8ebe26784a9b8e2ef80834350a76512b9f6790c6a0e55
-      - registry.connect.redhat.com/seldonio/tfproxy@sha256:e6ed51c45aaf1ca07ae4aaa7c2174795823dd92d7cc1073757ce671fb12abcbb
-      - registry.connect.redhat.com/seldonio/mlflowserver@sha256:05cc0ecb43052aedb27954f478c059c08a8f133df71f96a39ab7eeabd0329dcd
-      - registry.connect.redhat.com/seldonio/seldon-engine@sha256:eac00afa854e5e03f367c5b052b631b20246f0b068f92669f04facc1d6d88ee0
-      - registry.connect.redhat.com/seldonio/storage-initializer@sha256:3bd2c461a522b8de3a350cac259b6188c092fd032f0b38ad446fc5be4a3d2d34
-      - registry.connect.redhat.com/seldonio/sklearnserver@sha256:88d126455b150291cbb3772f67b4f35a88bb54b15ff7c879022f77fb051615ad
-      version: 1.7.0
-    name: stable
-  defaultChannel: stable
-  packageName: seldon-operator-certified
-  provider:
-    name: Seldon Technologies
+  name: seldon-controller-manager
+spec:
+  template:
+    metadata:
+      annotations:        
+        containerImage: $(SELDON_CORE_IMAGE)
+    spec:
+      containers:
+      - image: $(SELDON_CORE_IMAGE)
+        name: manager
+        
