--- a/odhseldon/cluster/custom-image/kustomization.yaml
+++ b/odhseldon/cluster/custom-image/kustomization.yaml
@@ -7,14 +7,14 @@ patchesStrategicMerge:
 configurations:
   - params.yaml
 configMapGenerator:
-  - name: ai-library-config
+  - name: seldon-custom-config
     envs:
       - params.env
 vars:
-  - name: YOUR_IMAGE
+  - name: SELDON_CORE_IMAGE
     objref:
-      name: superset-config
+      name: seldon-custom-config
       kind: ConfigMap
       apiVersion: v1
     fieldref:
-      fieldpath: data.YOUR_IMAGE
+      fieldpath: data.SELDON_CORE_IMAGE
