--- a/jupyterhub/jupyterhub/overlays/custom-image/params.env
+++ b/jupyterhub/jupyterhub/overlays/custom-image/params.env
@@ -1,2 +1,3 @@
 JUPYTERHUB_IMAGE=quay.io/odh-jupyterhub/jupyterhub-img:v0.3.0
 JUPYTERHUB_DB_IMAGE=registry.redhat.io/rhel8/postgresql-96
+JUPYTERHUB_SPARK_WORKER_IMAGE=quay.io/radanalyticsio/openshift-spark-py36:2.4.5-2
