--- a/odhseldon/cluster/overlays/custom-image/kustomization.yaml
+++ b/odhseldon/cluster/overlays/custom-image/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 bases:
   - ../../base
 patchesStrategicMerge:
-  - custom-image-dc.yaml
+  - seldon-operator-dc.yaml
 configurations:
   - params.yaml
 configMapGenerator:
