--- a/radanalyticsio/spark/cluster/overlays/custom-image/kustomization.yaml
+++ b/radanalyticsio/spark/cluster/overlays/custom-image/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 bases:
   - ../../base
 patchesStrategicMerge:
-  - custom-image-dc.yaml
+  - spark-operator-dc.yaml
 configurations:
   - params.yaml
 configMapGenerator:
