adding the changes to custom-images

--- a/jupyterhub/jupyterhub/overlays/custom-image/kustomization.yaml
+++ b/jupyterhub/jupyterhub/overlays/custom-image/kustomization.yaml
@@ -3,7 +3,8 @@ kind: Kustomization
 bases:
   - ../../base
 patchesStrategicMerge:
-  - custom-image-dc.yaml
+  - jupyterhub-db-dc.yaml
+  - jupyterhub-dc.yaml
   - jupyterhub-singleuser-profiles-configmap.yaml
 configurations:
   - params.yaml
