--- a/trino/overlays/custom-image/kustomization.yaml
+++ b/trino/overlays/custom-image/kustomization.yaml
@@ -3,7 +3,10 @@ kind: Kustomization
 bases:
   - ../../base
 patchesStrategicMerge:
-  - custom-image-dc.yaml
+  - hive-metastore-dc.yaml
+  - trino-coordinator-dc.yaml
+  - trino-worker-dc.yaml
+  - trino-db-dc.yaml
 configurations:
   - params.yaml
 configMapGenerator:
