fixed file names

--- a/superset/overlays/custom-image/kustomization.yaml
+++ b/superset/overlays/custom-image/kustomization.yaml
@@ -3,7 +3,8 @@ kind: Kustomization
 bases:
   - ../../base
 patchesStrategicMerge:
-  - custom-image-dc.yaml
+  - deployment.yaml
+  - supersetdb-deployment.yaml
 configurations:
   - params.yaml
 configMapGenerator:
