move away from env vars

--- a/superset/overlays/custom-image/deployment.yaml
+++ b/superset/overlays/custom-image/deployment.yaml
@@ -7,7 +7,7 @@ spec:
     spec:
       initContainers:
       - name: superset-init
-        image: $(SUPERSET_IMAGE)
+        image: quay.io/internaldatahub/superset:1.1.0
       containers:
       - name: superset
-        image: $(SUPERSET_IMAGE)
+        image: quay.io/internaldatahub/superset:1.1.0
