--- a/odhseldon/cluster/base/seldon-operator-role.yaml
+++ b/odhseldon/cluster/base/seldon-operator-role.yaml
@@ -1,10 +1,10 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  labels:
-    olm.owner: seldon-operator.v1.7.0
-    olm.owner.kind: ClusterServiceVersion
-    operators.coreos.com/seldon-operator-certified.ml-workshop: ""
+  # labels:
+  #   olm.owner: seldon-operator.v1.7.0
+  #   olm.owner.kind: ClusterServiceVersion
+  #   operators.coreos.com/seldon-operator-certified.ml-workshop: ""
   name: seldon-operator.v1.7.0-seldon-manager-role
 rules:
 - apiGroups:
