--- a/odhseldon/cluster/base/seldon-operator-clusterrolebinding.yaml
+++ b/odhseldon/cluster/base/seldon-operator-clusterrolebinding.yaml
@@ -1,9 +1,9 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  labels:
-    olm.owner: seldon-operator.v1.7.0
-    operators.coreos.com/seldon-operator-certified.ml-workshop: ""
+  # labels:
+  #   olm.owner: seldon-operator.v1.7.0
+  #   operators.coreos.com/seldon-operator-certified.ml-workshop: ""
   name: seldon-operator.v1.7.0-clusterrolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -12,4 +12,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: seldon-manager
-  namespace: pramod-test
+  namespace: anz-ml
