--- a/odhseldon/cluster/base/seldon-operator-dc.yaml
+++ b/odhseldon/cluster/base/seldon-operator-dc.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
+  # labels:
     # olm.owner: seldon-operator.v1.7.0
     # olm.owner.kind: ClusterServiceVersion
     # operators.coreos.com/seldon-operator-certified.ml-workshop: ""
