--- a/ml-workshop-airflow2/base/kustomization.yaml
+++ b/ml-workshop-airflow2/base/kustomization.yaml
@@ -2,11 +2,15 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - configmap.yaml
-  - deployment.yaml
   - secrets.yaml
   - service.yaml
   - service-accounts.yaml
   - route.yaml
+  - deployment-web.yaml
+  - deployment-worker.yaml
+  - deployment-scheduler.yaml
+  - statefulset-db.yaml
+  - statefulset-redis.yaml
 
 commonLabels:
   opendatahub.io/component: "false"
