--- a/ml-workshop-airflow2/overlays/custom-image/kustomization.yaml
+++ b/ml-workshop-airflow2/overlays/custom-image/kustomization.yaml
@@ -2,9 +2,14 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
   - ../../base
-  
+
 patchesStrategicMerge:
-  - deployment.yaml
+  - deployment-web.yaml
+  - deployment-worker.yaml
+  - deployment-scheduler.yaml
+  - statefulset-db.yaml
+  - statefulset-redis.yaml
+
 
 # configurations:
 #   - params.yaml
