--- a/radanalyticsio/spark/cluster/base/spark-operator-clusterrolebinding.yaml
+++ b/radanalyticsio/spark/cluster/base/spark-operator-clusterrolebinding.yaml
@@ -1,9 +1,6 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  labels:
-    olm.owner: sparkoperator.v1.1.0
-    operators.coreos.com/radanalytics-spark.ml-workshop: ""
   name: sparkoperator.v1.1.0-clusterrolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -13,4 +10,4 @@ subjects:
 - kind: ServiceAccount
   name: spark-crd-operator
   #This namespace needs to be parametrized 
-  namespace: pramod-test
+  namespace: anz-ml
