--- a/radanalyticsio/spark/cluster/base/spark-operator-rolebinding.yaml
+++ b/radanalyticsio/spark/cluster/base/spark-operator-rolebinding.yaml
@@ -1,8 +1,6 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  labels:
-    operators.coreos.com/radanalytics-spark.ml-workshop: ""
   name: sparkoperator.v1.1.0-spark-operator-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -11,3 +9,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: spark-operator
+  namespace: anz-ml
