--- a/trino/overlays/custom-image/trino-worker-dc.yaml
+++ b/trino/overlays/custom-image/trino-worker-dc.yaml
@@ -7,4 +7,4 @@ spec:
     spec:
       containers:
         - name: trino-worker
-          image: $(TRINO_IMAGE)
+          image: 'quay.io/opendatahub/trino:355'
