--- a/trino/overlays/custom-image/kustomization.yaml
+++ b/trino/overlays/custom-image/kustomization.yaml
@@ -7,31 +7,32 @@ patchesStrategicMerge:
   - trino-coordinator-dc.yaml
   - trino-worker-dc.yaml
   - trino-db-dc.yaml
-configurations:
-  - params.yaml
-configMapGenerator:
-  - name: trino-custom-config
-    envs:
-      - params.env
-vars:
-  - name: TRINO_IMAGE
-    objref:
-      name: trino-custom-config
-      kind: ConfigMap
-      apiVersion: v1
-    fieldref:
-      fieldpath: data.TRINO_IMAGE
-  - name: TRINO_DB_IMAGE
-    objref:
-      name: trino-custom-config
-      kind: ConfigMap
-      apiVersion: v1
-    fieldref:
-      fieldpath: data.TRINO_DB_IMAGE
-  - name: TRINO_HIVE_IMAGE
-    objref:
-      name: trino-custom-config
-      kind: ConfigMap
-      apiVersion: v1
-    fieldref:
-      fieldpath: data.TRINO_HIVE_IMAGE
+
+# configurations:
+#   - params.yaml
+# configMapGenerator:
+#   - name: trino-custom-config
+#     envs:
+#       - params.env
+# vars:
+#   - name: TRINO_IMAGE
+#     objref:
+#       name: trino-custom-config
+#       kind: ConfigMap
+#       apiVersion: v1
+#     fieldref:
+#       fieldpath: data.TRINO_IMAGE
+#   - name: TRINO_DB_IMAGE
+#     objref:
+#       name: trino-custom-config
+#       kind: ConfigMap
+#       apiVersion: v1
+#     fieldref:
+#       fieldpath: data.TRINO_DB_IMAGE
+#   - name: TRINO_HIVE_IMAGE
+#     objref:
+#       name: trino-custom-config
+#       kind: ConfigMap
+#       apiVersion: v1
+#     fieldref:
+#       fieldpath: data.TRINO_HIVE_IMAGE
