--- a/trino/overlays/custom-image/trino-coordinator-dc.yaml
+++ b/trino/overlays/custom-image/trino-coordinator-dc.yaml
@@ -7,4 +7,4 @@ spec:
     spec:
       containers:
         - name: trino-coordinator
-          image: $(TRINO_IMAGE)
+          image: 'quay.io/opendatahub/trino:355'
