--- a/trino/overlays/custom-image/trino-db-dc.yaml
+++ b/trino/overlays/custom-image/trino-db-dc.yaml
@@ -7,4 +7,4 @@ spec:
     spec:
       containers:
         - name: postgresql
-          image: $(TRINO_DB_IMAGE)
+          image: 'registry.redhat.io/rhel8/postgresql-96:latest'
