--- a/odhseldon/cluster/base/seldon-operator-crd-seldondeployments.yaml
+++ b/odhseldon/cluster/base/seldon-operator-crd-seldondeployments.yaml
@@ -18571,7 +18571,7 @@ spec:
             type: object
         type: object
     served: true
-    storage: true
+    storage: false
     subresources:
       scale:
         specReplicasPath: .spec.replicas
