--- a/odhseldon/cluster/base/kustomization.yaml
+++ b/odhseldon/cluster/base/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
  - seldon-operator-clusterrole.yaml
  - seldon-operator-clusterrolebinding.yaml
- - seldon-operator-crd-seldondeployments.yaml
+#  - seldon-operator-crd-seldondeployments.yaml
  - seldon-operator-role.yaml
  - seldon-operator-rolebinding.yaml
  - seldon-operator-sa.yaml
