--- a/jupyterhub/jupyterhub/overlays/custom-image/jupyterhub-dc.yaml
+++ b/jupyterhub/jupyterhub/overlays/custom-image/jupyterhub-dc.yaml
@@ -1,14 +1,102 @@
 apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
 metadata:
+  annotations:
+      app.openshift.io/connects-to: >-
+        [{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"jupyterhub-db"}]
+  labels:
+    app: jupyterhub
   name: jupyterhub
 spec:
-  template:
+  template:    
     spec:
-      initContainers:
-      - image: quay.io/odh-jupyterhub/jupyterhub-img:v0.3.0
-        name: wait-for-database
       containers:
-      - image: quay.io/odh-jupyterhub/jupyterhub-img:v0.3.0
+      - env:
+        - name: JUPYTERHUB_SERVICE_NAME
+          value: jupyterhub
+        - name: JUPYTERHUB_DATABASE_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: $(jupyterhub_secret)
+              key: POSTGRESQL_PASSWORD
+        - name: JUPYTERHUB_DATABASE_HOST
+          value: jupyterhub-db
+        - name: PROMETHEUS_API_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: $(jupyterhub_secret)
+              key: PROMETHEUS_API_TOKEN
+        - name: APP_SCRIPT
+          value: /opt/app-root/builder/run
+        - name: GPU_MODE
+          valueFrom:
+            configMapKeyRef:
+              name: jupyterhub-cfg
+              key: gpu_mode
+        - name: JUPYTERHUB_ADMIN_USERS
+          valueFrom:
+            configMapKeyRef:
+              name: jupyterhub-cfg
+              key: jupyterhub_admins
+        - name: SINGLEUSER_PVC_SIZE
+          valueFrom:
+            configMapKeyRef:
+              name: jupyterhub-cfg
+              key: singleuser_pvc_size
+        - name: JUPYTERHUB_ADMIN_GROUPS
+          valueFrom:
+            configMapKeyRef:
+              name: $(jupyterhub_groups_config)
+              key: admin_groups
+        - name: JUPYTERHUB_ALLOWED_GROUPS
+          valueFrom:
+            configMapKeyRef:
+              name: $(jupyterhub_groups_config)
+              key: allowed_groups
+        - name: JUPYTERHUB_CRYPT_KEY
+          valueFrom:
+            secretKeyRef:
+              name: $(jupyterhub_secret)
+              key: JUPYTERHUB_CRYPT_KEY
+        - name: JPY_COOKIE_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: $(jupyterhub_secret)
+              key: JPY_COOKIE_SECRET
+        - name: CONFIGPROXY_AUTH_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: $(jupyterhub_secret)
+              key: CONFIGPROXY_AUTH_TOKEN
+        image: quay.io/odh-jupyterhub/jupyterhub-img:v0.3.0
+        imagePullPolicy: "Always"
         name: jupyterhub
-        
+        ports:
+        - containerPort: 8080
+          protocol: TCP
+        resources:
+          limits:
+            memory: 1Gi
+        volumeMounts:
+        - mountPath: /opt/app-root/configs
+          name: config
+      initContainers:
+      - command:
+        - wait-for-database
+        env:
+        - name: JUPYTERHUB_DATABASE_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: $(jupyterhub_secret)
+              key: POSTGRESQL_PASSWORD
+        - name: JUPYTERHUB_DATABASE_HOST
+          value: jupyterhub-db
+        image: quay.io/odh-jupyterhub/jupyterhub-img:v0.3.0
+        imagePullPolicy: "Always"
+        name: wait-for-database
+        resources:
+          limits:
+            memory: 1Gi
+      serviceAccountName: jupyterhub-hub
+
+
